--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -764,6 +764,7 @@ cc_library(
         ":worker_rpc",
         "//src/ray/protobuf:worker_cc_proto",
         "@boost//:fiber",
+        "@com_google_absl//absl/container:btree",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/container:flat_hash_set",
     ],
@@ -908,6 +909,18 @@ cc_test(
 cc_test(
     name = "scheduling_queue_test",
     srcs = ["src/ray/core_worker/test/scheduling_queue_test.cc"],
+    copts = COPTS,
+    tags = ["team:core"],
+    deps = [
+        ":core_worker_lib",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
+
+cc_test(
+    name = "actor_submit_queue_test",
+    size = "small",
+    srcs = ["src/ray/core_worker/test/actor_submit_queue_test.cc"],
     copts = COPTS,
     tags = ["team:core"],
     deps = [
