--- a/python/ray/tests/BUILD
+++ b/python/ray/tests/BUILD
@@ -395,7 +395,7 @@ py_test_module_list(
     "test_object_spilling_2.py",
     "test_object_spilling_3.py",
     "test_scheduling.py",
-    "test_scheduling_2.py",
+    "test_worker_capping.py",
     "test_array.py"
   ],
   size = "medium",
@@ -411,7 +411,7 @@ py_test_module_list(
     "test_object_spilling_2.py",
     "test_object_spilling_3.py",
     "test_scheduling.py",
-    "test_scheduling_2.py",
+    "test_worker_capping.py",
     "test_array.py"
   ],
   size = "large",
