--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -323,7 +323,7 @@
     # And we save this image to a tarball, so that we can load it to podman image storage in the
     # nested-container which run tests. And in this nested-container, Raylet will start ray worker
     # process in double-nested-container.
-    - python ./ci/travis/build-docker-images.py --py-versions PY36 --build-type BUILDKITE --only-build-worker-container
+    - python ./ci/travis/build-docker-images.py --py-versions py36 --build-type BUILDKITE --only-build-worker-container
     - mkdir /ray-mount/containers
     - docker save -o /ray-mount/containers/images.tar rayproject/ray-worker-container:nightly-py36-cpu
     - docker run --rm --privileged -v /ray/containers:/var/lib/containers -v /ray:/ray --entrypoint /bin/bash
@@ -336,7 +336,7 @@
 #    - bazel test --config=ci $(./scripts/bazel_export_options)
 #      --test_tag_filters=-kubernetes,-medium_size_python_tests_a_to_j,-medium_size_python_tests_k_to_z,-client_tests,-flaky,-post_wheel_build,-worker-container
 #      --test_env=CONDA_EXE
-#      --test_env=CONDA_PYTHON_EXE
+#      --test_env=CONDA_PYTHON_EXE--py-versions
 #      --test_env=CONDA_SHLVL
 #      --test_env=CONDA_PREFIX
 #      --test_env=CONDA_DEFAULT_ENV
