--- a/python/ray/tune/BUILD
+++ b/python/ray/tune/BUILD
@@ -17,7 +17,7 @@ py_test(
     name = "test_actor_reuse",
     size = "medium",
     srcs = ["tests/test_actor_reuse.py"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_A"],
     deps = [":tune_lib"],
 )
 
@@ -26,7 +26,7 @@ py_test(
     size = "large",
     srcs = ["tests/test_api.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive", "rllib"],
+    tags = ["team:ml", "exclusive", "rllib", "tests_dir_A"],
 )
 
 py_test(
@@ -34,7 +34,7 @@ py_test(
     size = "small",
     srcs = ["tests/test_automl_searcher.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_A"],
 )
 
 py_test(
@@ -42,7 +42,7 @@ py_test(
     size = "small",
     srcs = ["tests/test_checkpoint_manager.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_C"],
 )
 
 py_test(
@@ -50,7 +50,7 @@ py_test(
     size = "large",
     srcs = ["tests/test_client.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "client", "py37", "exclusive"]
+    tags = ["team:ml", "client", "py37", "exclusive", "tests_dir_C"]
 )
 
 py_test(
@@ -58,7 +58,7 @@ py_test(
     size = "large",
     srcs = ["tests/test_cluster.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive", "rllib"],
+    tags = ["team:ml", "exclusive", "rllib", "tests_dir_C"],
 )
 
 py_test(
@@ -66,7 +66,7 @@ py_test(
     size = "large",
     srcs = ["tests/test_cluster_searcher.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_C"],
 )
 
 py_test(
@@ -74,7 +74,7 @@ py_test(
     size = "small",
     srcs = ["tests/test_commands.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_C"],
 )
 
 py_test(
@@ -82,7 +82,7 @@ py_test(
     size = "medium",
     srcs = ["tests/test_convergence.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_C"],
 )
 
 py_test(
@@ -90,7 +90,7 @@ py_test(
     size = "small",
     srcs = ["tests/test_dependency.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_D"],
 )
 
 py_test(
@@ -98,7 +98,7 @@ py_test(
     size = "small",
     srcs = ["tests/test_experiment.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_E"],
 )
 
 py_test(
@@ -106,7 +106,7 @@ py_test(
     size = "medium",
     srcs = ["tests/test_experiment_analysis.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_E"],
 )
 
 py_test(
@@ -114,7 +114,7 @@ py_test(
     size = "medium",
     srcs = ["tests/test_experiment_analysis_mem.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_E"],
 )
 
 py_test(
@@ -122,7 +122,7 @@ py_test(
     size = "medium",
     srcs = ["tests/test_function_api.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_F"],
 )
 
 py_test(
@@ -130,7 +130,7 @@ py_test(
     size = "small",
     srcs = ["tests/test_integration_docker.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_I"],
 )
 
 py_test(
@@ -138,7 +138,7 @@ py_test(
     size = "small",
     srcs = ["tests/test_integration_kubernetes.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_I"],
 )
 
 py_test(
@@ -146,7 +146,7 @@ py_test(
     size = "small",
     srcs = ["tests/test_integration_pytorch_lightning.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_I"],
 )
 
 py_test(
@@ -154,7 +154,7 @@ py_test(
     size = "small",
     srcs = ["tests/test_integration_wandb.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_I"],
 )
 
 py_test(
@@ -162,7 +162,7 @@ py_test(
     size = "small",
     srcs = ["tests/test_integration_mlflow.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"]
+    tags = ["team:ml", "exclusive", "tests_dir_I"]
 )
 
 py_test(
@@ -170,7 +170,7 @@ py_test(
     size = "small",
     srcs = ["tests/test_logger.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml"],
+    tags = ["team:ml", "tests_dir_L"],
 )
 
 py_test(
@@ -178,7 +178,7 @@ py_test(
     size = "medium",
     srcs = ["tests/test_progress_reporter.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_P"],
 )
 
 py_test(
@@ -186,7 +186,7 @@ py_test(
     size = "medium",
     srcs = ["tests/test_ray_trial_executor.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive". "tests_dir_R"],
 )
 
 py_test(
@@ -194,7 +194,7 @@ py_test(
     size = "medium",
     srcs = ["tests/test_run_experiment.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_R"],
 )
 
 py_test(
@@ -202,7 +202,7 @@ py_test(
     size = "medium",
     srcs = ["tests/test_remote.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_R"],
 )
 
 py_test(
@@ -210,7 +210,7 @@ py_test(
     size = "medium",
     srcs = ["tests/test_sample.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_S"],
 )
 
 py_test(
@@ -218,7 +218,7 @@ py_test(
     size = "medium",
     srcs = ["tests/test_searchers.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_S"],
 )
 
 py_test(
@@ -226,7 +226,7 @@ py_test(
     size = "small",
     srcs = ["tests/test_soft_imports.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "soft_imports"],
+    tags = ["team:ml", "soft_imports", "tests_dir_S"],
 )
 
 py_test(
@@ -234,7 +234,7 @@ py_test(
     size = "medium",
     srcs = ["tests/test_sync.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_S"],
 )
 
 py_test(
@@ -242,7 +242,7 @@ py_test(
     size = "small",
     srcs = ["tests/test_trainable_util.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_T"],
 )
 
 py_test(
@@ -250,7 +250,7 @@ py_test(
     size = "medium",
     srcs = ["tests/test_trial_runner.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_T"],
 )
 
 py_test(
@@ -258,7 +258,7 @@ py_test(
     size = "medium",
     srcs = ["tests/test_trial_runner_2.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_T"],
 )
 
 py_test(
@@ -266,7 +266,7 @@ py_test(
     size = "medium",
     srcs = ["tests/test_trial_runner_3.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_T"],
 )
 
 py_test(
@@ -274,7 +274,7 @@ py_test(
     size = "medium",
     srcs = ["tests/test_trial_runner_pg.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_T"],
 )
 
 py_test(
@@ -282,7 +282,7 @@ py_test(
     size = "small",
     srcs = ["tests/test_trial_runner_callbacks.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_T"],
 )
 
 py_test(
@@ -290,7 +290,7 @@ py_test(
     size = "medium",
     srcs = ["tests/test_var.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_V"],
 )
 
 py_test(
@@ -298,7 +298,7 @@ py_test(
     size = "large",
     srcs = ["tests/test_trial_scheduler.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_T"],
 )
 
 py_test(
@@ -306,7 +306,7 @@ py_test(
     size = "medium",
     srcs = ["tests/test_trial_scheduler_pbt.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive", "flaky"],
+    tags = ["team:ml", "exclusive", "flaky", "tests_dir_T"],
 )
 
 py_test(
@@ -314,7 +314,7 @@ py_test(
     size = "large",
     srcs = ["tests/test_tune_restore.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive", "rllib"],
+    tags = ["team:ml", "exclusive", "rllib", "tests_dir_T"],
 )
 
 py_test(
@@ -322,7 +322,7 @@ py_test(
     size = "small",
     srcs = ["tests/test_tune_save_restore.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_T"],
 )
 
 py_test(
@@ -330,7 +330,7 @@ py_test(
     size = "medium",
     srcs = ["tests/test_tune_server.py"],
     deps = [":tune_lib"],
-    tags = ["team:ml", "exclusive"],
+    tags = ["team:ml", "exclusive", "tests_dir_T"],
 )
 
 # --------------------------------------------------------------------
@@ -803,7 +803,7 @@ py_test(
 )
 
 py_test(
-    name = "tf_mnist_example",
+    name = "c",
     size = "medium",
     srcs = ["examples/tf_mnist_example.py"],
     deps = [":tune_lib"],
