--- a/release/nightly_tests/placement_group_tests/pg_perf_test_compute.yaml
+++ b/release/nightly_tests/placement_group_tests/pg_perf_test_compute.yaml
@@ -9,19 +9,19 @@ aws:
 
 head_node_type:
     name: head_node
-    instance_type: m5.4xlarge
+    instance_type: m5.8xlarge
+    resources:
+      custom_resources:
+        pending: 1
+        custom: 100
 
 worker_node_types:
-    - name: cpu_node
-      instance_type: m5.4xlarge
-      min_workers: 0
-      max_workers: 2
-      use_spot: false
-    - name: fake_gpu_node
-      instance_type: m5.4xlarge
-      min_workers: 0 
-      max_workers: 2
-      use_spot: false
-      resources:
-        cpu: 16
-        gpu: 1
+   - name: worker_node
+     instance_type: m5.4xlarge
+     min_workers: 4
+     max_workers: 4
+     use_spot: false
+     resources:
+      custom_resources:
+        pending: 1
+        custom: 100
