[RLlib] Issue 20062: Action inference examples missing (#20144)

--- a/rllib/BUILD
+++ b/rllib/BUILD
@@ -2393,6 +2393,60 @@ py_test(
 )
 
 py_test(
+    name = "examples/inference_and_serving/policy_inference_after_training_tf",
+    main = "examples/inference_and_serving/policy_inference_after_training.py",
+    tags = ["team:ml", "examples", "examples_P"],
+    size = "medium",
+    srcs = ["examples/inference_and_serving/policy_inference_after_training.py"],
+    args = ["--stop-iters=3", "--framework=tf"]
+)
+
+py_test(
+    name = "examples/inference_and_serving/policy_inference_after_training_torch",
+    main = "examples/inference_and_serving/policy_inference_after_training.py",
+    tags = ["team:ml", "examples", "examples_P"],
+    size = "medium",
+    srcs = ["examples/inference_and_serving/policy_inference_after_training.py"],
+    args = ["--stop-iters=3", "--framework=torch"]
+)
+
+py_test(
+    name = "examples/inference_and_serving/policy_inference_after_training_with_attention_tf",
+    main = "examples/inference_and_serving/policy_inference_after_training_with_attention.py",
+    tags = ["team:ml", "examples", "examples_P"],
+    size = "medium",
+    srcs = ["examples/inference_and_serving/policy_inference_after_training_with_attention.py"],
+    args = ["--stop-iters=2", "--framework=tf"]
+)
+
+py_test(
+    name = "examples/inference_and_serving/policy_inference_after_training_with_attention_torch",
+    main = "examples/inference_and_serving/policy_inference_after_training_with_attention.py",
+    tags = ["team:ml", "examples", "examples_P"],
+    size = "medium",
+    srcs = ["examples/inference_and_serving/policy_inference_after_training_with_attention.py"],
+    args = ["--stop-iters=2", "--framework=torch"]
+)
+
+py_test(
+    name = "examples/inference_and_serving/policy_inference_after_training_with_lstm_tf",
+    main = "examples/inference_and_serving/policy_inference_after_training_with_lstm.py",
+    tags = ["team:ml", "examples", "examples_P"],
+    size = "medium",
+    srcs = ["examples/inference_and_serving/policy_inference_after_training_with_lstm.py"],
+    args = ["--stop-iters=1", "--framework=tf"]
+)
+
+py_test(
+    name = "examples/inference_and_serving/policy_inference_after_training_with_lstm_torch",
+    main = "examples/inference_and_serving/policy_inference_after_training_with_lstm.py",
+    tags = ["team:ml", "examples", "examples_P"],
+    size = "medium",
+    srcs = ["examples/inference_and_serving/policy_inference_after_training_with_lstm.py"],
+    args = ["--stop-iters=1", "--framework=torch"]
+)
+
+py_test(
     name = "examples/preprocessing_disabled_tf",
     main = "examples/preprocessing_disabled.py",
     tags = ["team:ml", "examples", "examples_P"],
