--- a/python/ray/tests/BUILD
+++ b/python/ray/tests/BUILD
@@ -212,6 +212,7 @@ py_test_module_list(
     "test_object_manager.py",
     "test_multi_tenancy.py",
     "test_scheduling.py",
+    "test_scheduling_2.py",
   ],
   size = "medium",
   extra_srcs = SRCS,
@@ -396,6 +397,7 @@ py_test_module_list(
     "test_object_spilling_2.py",
     "test_object_spilling_3.py",
     "test_scheduling.py",
+    "test_scheduling_2.py",
     "test_array.py"
   ],
   size = "medium",
@@ -411,6 +413,7 @@ py_test_module_list(
     "test_object_spilling_2.py",
     "test_object_spilling_3.py",
     "test_scheduling.py",
+    "test_scheduling_2.py",
     "test_array.py"
   ],
   size = "large",
