--- a/release/ml_user_tests/ray-lightning/app_config_master.yaml
+++ b/release/ml_user_tests/ray-lightning/app_config_master.yaml
@@ -8,6 +8,7 @@ debian_packages:
 python:
   pip_packages:
     - git+https://github.com/ray-project/ray_lightning#ray_lightning
+    - tblib
   conda_packages: []
 
 post_build_cmds:
