--- a/release/lightgbm_tests/app_config.yaml
+++ b/release/lightgbm_tests/app_config.yaml
@@ -12,6 +12,7 @@ python:
   conda_packages: []
 
 post_build_cmds:
+  - pip uninstall -y ray || true
   - pip3 install -U {{ env["RAY_WHEELS"] | default("ray") }}
   - sudo mkdir -p /data || true
   - sudo chown ray:1000 /data || true
