--- a/release/ml_user_tests/ml_user_tests.yaml
+++ b/release/ml_user_tests/ml_user_tests.yaml
@@ -43,6 +43,7 @@
         compute_template: train/compute_tpl.yaml
 
     run:
+        use_connect: True
         timeout: 36000
         script: python train/train_torch_linear_test.py
 
