[gcs] Update all redis kv usage in python except function table (#20014)
## Why are these changes needed?
This is part of redis removal project. In this PR all direct usage of redis got removed except function table.
Function table will be migrated in the next PR

## Related issue number
#19443

--- a/python/ray/tests/BUILD
+++ b/python/ray/tests/BUILD
@@ -244,7 +244,8 @@ py_test_module_list(
 py_test_module_list(
   files = [
     "test_runtime_env.py",
-    "test_runtime_env_working_dir.py"
+    "test_runtime_env_working_dir.py",
+    "test_runtime_env_working_dir_2.py"
   ],
   size = "large",
   extra_srcs = SRCS,
