--- a/release/nightly_tests/nightly_tests.yaml
+++ b/release/nightly_tests/nightly_tests.yaml
@@ -376,3 +376,4 @@
     timeout: 3600
     prepare: python wait_cluster.py 2 600
     script: python placement_group_tests/long_running_performance_test.py --num-stages 5000
+  stable: false
