--- a/python/ray/serve/BUILD
+++ b/python/ray/serve/BUILD
@@ -215,6 +215,14 @@ py_test(
 )
 
 py_test(
+    name = "test_standalone2",
+    size = "medium",
+    srcs = serve_tests_srcs,
+    tags = ["exclusive", "team:serve"],
+    deps = [":serve_lib"],
+)
+
+py_test(
     name = "test_cluster",
     size = "small",
     srcs = serve_tests_srcs,
