--- a/release/ml_user_tests/ml_user_tests.yaml
+++ b/release/ml_user_tests/ml_user_tests.yaml
@@ -34,6 +34,7 @@
     driver_setup: train/driver_setup.sh
 
     run:
+        use_connect: True
         timeout: 36000
         script: python train/train_tensorflow_mnist_test.py
 
