--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -7,9 +7,11 @@
 # setup.py install_requires
 aiohttp>=3.7
 aioredis < 2
+aiosignal
 click >= 7.0
 cloudpickle
 filelock
+frozenlist
 gpustat >= 1.0.0b1
 grpcio >= 1.28.1
 jsonschema
