--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -314,20 +314,20 @@
       --test_env=CONDA_PREFIX
       --test_env=CONDA_DEFAULT_ENV
       python/ray/tests/...
-#- label: ":python: (Worker In Container)"
-  #conditions: ["RAY_CI_PYTHON_AFFECTED"]
-  #commands:
-    #- LINUX_WHEELS=1 ./ci/travis/ci.sh build
-    #- pip install docker
-     #We build image ray-worker-container:nightly-py36-cpu which have installed podman,but not push it.
-     #And we save this image to a tarball, so that we can load it to podman image storage in the
-     #nested-container which run tests. And in this nested-container, Raylet will start ray worker
-     #process in double-nested-container.
-    #- python ./ci/travis/build-docker-images.py --py-versions PY36 --build-type BUILDKITE --only-build-worker-container
-    #- mkdir /ray-mount/containers
-    #- docker save -o /ray-mount/containers/images.tar rayproject/ray-worker-container:nightly-py36-cpu
-    #- docker run --rm --privileged -v /ray/containers:/var/lib/containers -v /ray:/ray --entrypoint /bin/bash
-      #rayproject/ray-worker-container:nightly-py36-cpu /ray/ci/travis/test-worker-in-container.sh
+- label: ":python: (Privileged test)"
+  conditions: ["RAY_CI_PYTHON_AFFECTED"]
+  commands:
+    - LINUX_WHEELS=1 ./ci/travis/ci.sh build
+    - pip install docker
+    # We build image ray-worker-container:nightly-py36-cpu which have installed podman,but not push it.
+    # And we save this image to a tarball, so that we can load it to podman image storage in the
+    # nested-container which run tests. And in this nested-container, Raylet will start ray worker
+    # process in double-nested-container.
+    - python ./ci/travis/build-docker-images.py --py-versions py36 --device-types cpu --build-type BUILDKITE --only-build-worker-container
+    - mkdir /ray-mount/containers
+    - docker save -o /ray-mount/containers/images.tar rayproject/ray-worker-container:nightly-py36-cpu
+    - docker run --rm --privileged -v /ray/containers:/var/lib/containers -v /ray:/ray --entrypoint /bin/bash
+      rayproject/ray-worker-container:nightly-py36-cpu /ray/ci/travis/test-worker-in-container.sh
 
 - label: ":redis: HA GCS (Small & Large)"
   conditions: ["RAY_CI_PYTHON_AFFECTED"]
