--- a/release/nightly_tests/chaos_test.yaml
+++ b/release/nightly_tests/chaos_test.yaml
@@ -10,7 +10,7 @@
 
   run:
     timeout: 3600
-    prepare: python wait_cluster.py 10 600
+    prepare: python wait_cluster.py 10 600; python setup_chaos.py
     script: python chaos_test/test_chaos_basic.py --workload=tasks
   stable: false
 
