fix bug: reconfigure can mutate state mid-query

--- a/python/ray/serve/BUILD
+++ b/python/ray/serve/BUILD
@@ -397,3 +397,11 @@ py_test(
     tags = ["exclusive", "team:serve"],
     deps = [":serve_lib"],
 )
+
+py_test(
+    name = "test_reconfiguration",
+    size = "small",
+    srcs = pipeline_tests_srcs,
+    tags = ["exclusive", "team:serve"],
+    deps = [":serve_lib"],
+)
