disable //python/ray/tests:test_autoscaler_drain_node_api in HA GCS build

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -344,6 +344,7 @@
       -- //python/ray/tests/...
       -//python/ray/tests:test_failure_2
       -//python/ray/tests:test_job
+      -//python/ray/tests:test_autoscaler_drain_node_api
     - bazel test --config=ci $(./scripts/bazel_export_options)
       --test_tag_filters=-kubernetes,client_tests,-flaky
       --test_env=RAY_CLIENT_MODE=1 --test_env=RAY_PROFILING=1
