Switch many_ppo test to use the canonical rllib app cfg as well.

--- a/release/long_running_tests/long_running_tests.yaml
+++ b/release/long_running_tests/long_running_tests.yaml
@@ -77,7 +77,7 @@
 
 - name: many_ppo
   cluster:
-    app_config: app_config.yaml
+    app_config: ../rllib_tests/app_config.yaml
     compute_template: many_ppo.yaml
 
   run:
