--- a/python/ray/train/BUILD
+++ b/python/ray/train/BUILD
@@ -86,6 +86,15 @@ py_test(
 )
 
 py_test(
+    name = "test_callbacks",
+    size = "medium",
+    srcs = ["tests/test_callbacks.py"],
+    tags = ["team:ml", "exclusive"],
+    deps = [":train_lib"]
+)
+
+
+py_test(
     name = "test_gpu",
     size = "large",
     srcs = ["tests/test_gpu.py"],
