--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -142,8 +142,7 @@
 - label: ":book: Lint"
   commands:
     - export LINT=1
-    # Need to install horovod here so that Ray Train docs will render correctly.
-    - INSTALL_HOROVOD=1 ./ci/travis/install-dependencies.sh
+    - ./ci/travis/install-dependencies.sh
     - ./ci/travis/ci.sh lint
     - ./ci/travis/ci.sh build
 
