[train] wrap BackendExecutor in ray.remote() (#20123)
* [train] wrap BackendExecutor in ray.remote()

* wip

* fix trainer tests

* move CheckpointManager to Trainer

* [tune] move force_on_current_node to ml_utils

* fix import

* force on head node

* init ray

* split test files

* update example

* move tests to ray client

* address comments

* move comment

* address comments

--- a/python/ray/train/BUILD
+++ b/python/ray/train/BUILD
@@ -93,6 +93,13 @@ py_test(
     deps = [":train_lib"]
 )
 
+py_test(
+    name = "test_examples",
+    size = "large",
+    srcs = ["tests/test_examples.py"],
+    tags = ["team:ml", "exclusive"],
+    deps = [":train_lib"]
+)
 
 py_test(
     name = "test_gpu",
