[Core] Add Placement group performance test (#20218)
* in progress

* ip

* Fix issues

* done

* Address code review.

--- a/release/nightly_tests/nightly_tests.yaml
+++ b/release/nightly_tests/nightly_tests.yaml
@@ -264,16 +264,6 @@
       script: python stress_tests/test_threaded_actors.py --test-runtime 1800 --kill-interval_s 30
   stable: false
 
-- name: grpc_stress_test_placement_group
-  cluster:
-    app_config: stress_tests/stress_tests_app_config_grpc.yaml
-    compute_template: stress_tests/placement_group_tests_compute.yaml
-
-  run:
-    timeout: 7200
-    script: python stress_tests/test_placement_group.py
-  stable: false
-
 # Test decision tree on autoscaling compute cluster.
 - name: decision_tree_autoscaling
   cluster:
@@ -366,3 +356,13 @@
   run:
     timeout: 1200
     script: python placement_group_tests/pg_run.py
+
+- name: placement_group_performance_test
+  cluster:
+    app_config: placement_group_tests/app_config.yaml
+    compute_template: placement_group_tests/pg_perf_test_compute.yaml
+
+  run:
+    timeout: 1200
+    prepare: python wait_cluster.py 5 600
+    script: python placement_group_tests/placement_group_performance_test.py
