[train] fix train ml_user_tests using ray client

--- a/release/ml_user_tests/ml_user_tests.yaml
+++ b/release/ml_user_tests/ml_user_tests.yaml
@@ -43,6 +43,8 @@
         app_config: train/app_config.yaml
         compute_template: train/compute_tpl.yaml
 
+    driver_setup: train/driver_setup.sh
+
     run:
         use_connect: True
         timeout: 36000
