--- a/release/ml_user_tests/xgboost/app_config_gpu_master.yaml
+++ b/release/ml_user_tests/xgboost/app_config_gpu_master.yaml
@@ -8,6 +8,7 @@ python:
     - pytest
     - git+https://github.com/ray-project/xgboost_ray@master#egg=xgboost_ray
     - petastorm
+    - tblib
   conda_packages: []
 
 post_build_cmds:
