--- a/release/ml_user_tests/xgboost/app_config_gpu_master.yaml
+++ b/release/ml_user_tests/xgboost/app_config_gpu_master.yaml
@@ -12,7 +12,9 @@ python:
   conda_packages: []
 
 post_build_cmds:
-  - pip uninstall -y ray || true
+  - pip uninstall -y numpy ray || true
+  - sudo rm -rf /home/ray/anaconda3/lib/python3.7/site-packages/numpy || true
+  - pip3 install numpy || true
   - pip3 install -U {{ env["RAY_WHEELS"] | default("ray") }}
   - {{ env["RAY_WHEELS_SANITY_CHECK"] | default("echo No Ray wheels sanity check") }}
   - sudo mkdir -p /data || true
