--- a/release/ml_user_tests/xgboost/app_config_gpu.yaml
+++ b/release/ml_user_tests/xgboost/app_config_gpu.yaml
@@ -13,7 +13,7 @@ python:
 post_build_cmds:
   - pip uninstall -y ray || true
   - pip3 install -U {{ env["RAY_WHEELS"] | default("ray") }}
-  - pip install -U xgboost_ray petastorm
+  - pip3 install -U xgboost xgboost_ray petastorm  # Install latest releases, pin xgboost to <1.5
   - {{ env["RAY_WHEELS_SANITY_CHECK"] | default("echo No Ray wheels sanity check") }}
   - sudo mkdir -p /data || true
   - sudo chown ray:1000 /data || true
