--- a/release/long_running_tests/long_running_tests.yaml
+++ b/release/long_running_tests/long_running_tests.yaml
@@ -31,7 +31,7 @@
 
 - name: impala
   cluster:
-    app_config: ../rllib_tests/app_config.yaml
+    app_config: app_config_np.yaml
     compute_template: tpl_cpu_1.yaml
 
   run:
