--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -222,8 +222,8 @@
     - bazel test --config=ci $(./scripts/bazel_export_options)
       --test_tag_filters=-post_wheel_build
       python/ray/serve/...
-    - bazel test --config=ci $(./scripts/bazel_export_options) \
-      --test_tag_filters=team:serve \
+    - bazel test --config=ci $(./scripts/bazel_export_options)
+      --test_tag_filters=team:serve
       release/...
 
 - label: ":python: Minimal install"
