[Regresion test] Placement group long running test (#20251)
Why are these changes needed?
In the past, there was a regression the placement group creation time gets slower as time goes. I believe the issue is fixed in the master, but this PR verifies if that's actually fixed.

This PR adds a long running test for the placement group. There are 2 purposes of the test.

Make sure the placement group creation / removal doesn't get slower as time goes. The test basically measure the first 20 iteration P50 creation time and run very long iteration. After all iteration, it checks if the p50 creation time is not too slow compared to the initial round.
Make sure placement group removal / creation works consistently for a long time without an issue.
Q: Should we make it a real long running test? (that runs for a day?)

--- a/release/nightly_tests/nightly_tests.yaml
+++ b/release/nightly_tests/nightly_tests.yaml
@@ -357,6 +357,17 @@
     timeout: 1200
     script: python placement_group_tests/pg_run.py
 
+- name: pg_long_running_performance_test
+  cluster:
+    app_config: placement_group_tests/app_config.yaml
+    compute_template: placement_group_tests/long_running_test_compute.yaml
+
+  run:
+    timeout: 3600
+    prepare: python wait_cluster.py 2 600
+    script: python placement_group_tests/long_running_performance_test.py --num-stages 5000
+  stable: false
+
 - name: placement_group_performance_test
   cluster:
     app_config: placement_group_tests/app_config.yaml
