--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -23,7 +23,7 @@ protobuf >= 3.8.0
 py-spy >= 0.2.0
 pydantic >= 1.8
 pyyaml
-redis >= 3.5.0
+redis >= 3.5.0, < 4.0.0
 requests
 
 ## setup.py extras
