Add error messages for missing tf and torch imports (#20205)
Co-authored-by: Sven Mika <sven@anyscale.io>
Co-authored-by: sven1977 <svenmika1977@gmail.com>

--- a/rllib/BUILD
+++ b/rllib/BUILD
@@ -1488,6 +1488,13 @@ py_test(
 )
 
 py_test(
+    name = "tests/test_nn_framework_import_errors",
+    tags = ["team:ml", "tests_dir", "tests_dir_N"],
+    size = "small",
+    srcs = ["tests/test_nn_framework_import_errors.py"]
+)
+
+py_test(
     name = "tests/test_pettingzoo_env",
     tags = ["team:ml", "tests_dir", "tests_dir_P"],
     size = "medium",
