--- a/release/long_running_tests/app_config.yaml
+++ b/release/long_running_tests/app_config.yaml
@@ -1,5 +1,6 @@
 base_image: "anyscale/ray:nightly-py37"
 env_vars: {}
+
 debian_packages:
   - curl
   - unzip
@@ -18,6 +19,8 @@ post_build_cmds:
   - pip3 install numpy || true
   - pip3 install pytest || true
   - pip3 install -U ray[all] gym[atari] autorom[accept-rom-license]
-  - pip3 install -U {{ env["RAY_WHEELS"] | default("ray") }}
   - pip3 install ray[all]
+  # TODO (Alex): Ideally we would install all the dependencies from the new
+  # version too, but pip won't be able to find the new version of ray-cpp.
+  - pip3 install -U {{ env["RAY_WHEELS"] | default("ray") }}
   - {{ env["RAY_WHEELS_SANITY_CHECK"] | default("echo No Ray wheels sanity check") }}
