--- a/rllib/BUILD
+++ b/rllib/BUILD
@@ -2735,3 +2735,11 @@ py_test(
     size = "medium",
     srcs = ["examples/documentation/rllib_on_ray_readme.py"],
 )
+
+py_test(
+    name = "examples/documentation/rllib_on_rllib_readme",
+    main = "examples/documentation/rllib_on_rllib_readme.py",
+    tags = ["team:ml", "documentation"],
+    size = "medium",
+    srcs = ["examples/documentation/rllib_on_rllib_readme.py"],
+)
