--- a/python/ray/serve/BUILD
+++ b/python/ray/serve/BUILD
@@ -208,7 +208,7 @@ py_test(
 
 py_test(
     name = "test_standalone",
-    size = "medium",
+    size = "large",
     srcs = serve_tests_srcs,
     tags = ["exclusive", "team:serve"],
     deps = [":serve_lib"],
