TrialCheckpoint on cloud first iteration

--- a/python/ray/tune/BUILD
+++ b/python/ray/tune/BUILD
@@ -55,6 +55,14 @@ py_test(
 )
 
 py_test(
+    name = "test_cloud",
+    size = "medium",
+    srcs = ["tests/test_cloud.py"],
+    deps = [":tune_lib"],
+    tags = ["team:ml", "exclusive", "tests_dir_C"],
+)
+
+py_test(
     name = "test_cluster",
     size = "large",
     srcs = ["tests/test_cluster.py"],
